--- a/flyedit.html
+++ b/flyedit.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="flyEdit.css">
     <style>
-        table tr td,
+        /* table tr td,
         table tr td {
             position: relative;
-        }
+        } */
     </style>
 </head>
 
